# feat-memory

./: .gitattributes  .gitignore  .upstream.example  AGENT.md  AGENTS.md  CHANGELOG.md  FUTURE_IMPROVEMENTS.md  LICENSE  METHODOLOGY.md  README.md  STATE.md  USER_GUIDE.md  deploy.py  pyproject.toml  update.py
.agent-memory/: .meta.yaml  STATE.md
.agent-memory/checkpoints/: 2026-04-30-175800.md  2026-06-03-044524.md
.agent-memory/decisions/: 0001-agent-md-multi-agent-convention.md  0002-constraints-hard-soft-severity.md  0003-ears-acceptance-criteria.md  0004-three-separate-skills.md  0005-version-agent-memory-folder-in-consumer.md  0007-distribute-as-pipx-package.md  0008-precommit-hook-fail-open.md  0009-apply-methodology-to-self.md  0011-deploy-replaces-agent-md-block-via-sentinels.md  0012-skill-memory-pull-brief.md  0013-meta-yaml-records-deployed-version.md  0014-audit-detects-lying-memory.md  0015-archive-shipped-features.md  0016-hook-warns-on-staged-staleness.md  0017-local-telemetry-opt-out.md  0018-checkpoints-append-only.md  0019-checkpoint-format-and-migration.md  0020-hook-blocks-code-without-version-bump.md  0021-memory-vs-governance-separation.md  0022-consumer-version-notice.md  0023-superseded-decisions-folder.md  0024-audit-crosschecks-status-vs-release.md  0025-distribute-via-pypi-trusted-publishing.md  0026-ci-cross-os-second-line.md  0027-adr-version-field-optional.md  0028-constraints-declarative-checkers.md  0029-deploy-injects-frontmatter-skeleton.md  0030-code-first-retroactive-genesis.md  0031-multi-source-reverse-engineering-genesis.md  0032-frontmatter-authorship-propose-approve.md  0034-meta-drops-cli-path.md  INDEX.md
.agent-memory/manifest/: INDEX.md
.claude/agents/: memory-debrief.md
.feat-memory/: .meta.yaml  STATE.md  ideas.md  suggestions.md
.feat-memory/changelog/: 0.1.0.md  0.10.0.md  0.11.0.md  0.12.0.md  0.2.0.md  0.3.0.md  0.3.1.md  0.4.0.md  0.5.0.md  0.6.0.md  0.7.0.md  0.8.0.md  0.8.1.md  0.9.0.md  1.0.0.md  1.1.0.md  1.10.0.md  1.2.0.md  1.3.0.md  1.3.1.md  1.4.0.md  1.5.0.md  1.6.0.md  1.7.0.md  1.8.0.md  1.9.0.md  2.0.0.md  2.1.0.md  2.1.1.md  2.1.2.md  2.2.0.md  2.2.1.md  2.2.2.md  2.3.0.md  2.3.1.md  2.3.2.md  INDEX.md  UNRELEASED.md
.feat-memory/checkpoints/: 2026-05-04-214104.md  2026-05-11-043539.md  2026-06-03-040151.md
.feat-memory/decisions/: 0002-constraints-hard-soft-severity.md  0003-ears-acceptance-criteria.md  0004-three-separate-skills.md  0007-distribute-as-pipx-package.md  0008-precommit-hook-fail-open.md  0009-apply-methodology-to-self.md  0011-deploy-replaces-agent-md-block-via-sentinels.md  0012-skill-memory-pull-brief.md  0013-meta-yaml-records-deployed-version.md  0014-audit-detects-lying-memory.md  0015-archive-shipped-features.md  0016-hook-warns-on-staged-staleness.md  0017-local-telemetry-opt-out.md  0018-checkpoints-append-only.md  0019-checkpoint-format-and-migration.md  0020-hook-blocks-code-without-version-bump.md  0021-memory-vs-governance-separation.md  0022-consumer-version-notice.md  0023-superseded-decisions-folder.md  0024-audit-crosschecks-status-vs-release.md  0025-distribute-via-pypi-trusted-publishing.md  0026-ci-cross-os-second-line.md  0027-adr-version-field-optional.md  0028-constraints-declarative-checkers.md  0029-deploy-injects-frontmatter-skeleton.md  (+21 more)
.kilo/: agent-manager.json
decisions/: 0002-constraints-hard-soft-severity.md  0006-gitignore-and-reclone-tool-folder.md  0007-distribute-as-pipx-package.md  0008-precommit-hook-fail-open.md  0009-apply-methodology-to-self.md  0010-merge-separates-methodology-from-project-sections.md  INDEX.md
docs/: SCHEMA-REFERENCE.md
manifest/: INDEX.md
templates/: .gitattributes  AGENT.md  STATE.md
tests/: conftest.py  test_adr_version.py  test_archive.py  test_audit_anti_lying.py  test_audit_budget.py  test_changelog.py  test_changelog_guard.py  test_changelog_migration.py  test_check_doc_sync.py  test_check_staleness.py  test_check_version_bump.py  test_checkpoints.py  test_cli.py  test_constraints.py  test_deploy.py  test_entrypoint.py  test_meta.py  test_migrate.py  test_no_stale_cutover_refs.py  test_packaging.py  test_planned_no_drift.py  test_release_status.py  test_schema_reference.py  test_sentinel.py  test_skills_methodology.py  test_superseded_decisions.py  test_telemetry.py  test_upgrade_guard.py  test_version_check.py
tools/: audit.py  install_hooks.py  propose-adr.py
(+194 files in other folders)
