[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory"
dynamic = ["version"]
description = "Persistent memory methodology for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Bruno Leonardo Schneider"}]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["pyyaml>=6.0"]

[project.scripts]
agent-memory = "agent_memory.cli:main"

[project.urls]
Homepage = "https://github.com/brunoleos/agent-memory"
Issues = "https://github.com/brunoleos/agent-memory/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_memory = [
    "data/templates/*",
    "data/templates/.gitattributes",
    "data/skills/**/SKILL.md",
    "data/hooks/*",
]
