[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "feat-memory"
dynamic = ["version"]
description = "Persistent memory methodology for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Bruno Leonardo Schneider"}]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["llm", "agent", "memory", "claude", "cursor", "methodology", "adr", "manifest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["pyyaml>=6.0"]

[project.scripts]
feat-memory = "feat_memory.cli:main"

[project.urls]
Homepage = "https://github.com/brunoleos/feat-memory"
Repository = "https://github.com/brunoleos/feat-memory"
Changelog = "https://github.com/brunoleos/feat-memory/blob/main/CHANGELOG.md"
Issues = "https://github.com/brunoleos/feat-memory/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
feat_memory = [
    "data/templates/*",
    "data/templates/.gitattributes",
    "data/skills/**/SKILL.md",
    "data/agents/*",
]
# Hooks vivem no subpacote governance/ desde o split F-0017 (ADR-0021).
# Sem esta entrada, o wheel omitia o pre-commit (bug corrigido em F-0021).
"feat_memory.governance" = [
    "data/hooks/*",
]
